--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "./styles/animations.css";
+@import "./styles/design-system.css";
 
 /* Code & Core Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&family=Assistant:wght@300;400;500;700;800&family=Montserrat:wght@400;600;700;900&display=swap');
